feat: add Go CLI tool for SpecKit workflow automation with configuration management and retry logic
The commit introduces a new Go-based CLI tool named "autospec" for automating SpecKit workflows. It includes configuration management that allows users to specify commands and parameters through a JSON configuration file, environment variables, or defaults. The tool also implements retry logic for handling failures during workflow execution, ensuring robustness. Additionally, it provides functionality to detect the current specification based on Git branch names or the most recently modified directories. This enhances the usability and flexibility of the SpecKit workflow automation process.

feat(tests): add comprehensive tests for spec detection and validation functions
feat(validation): implement task and phase validation functions for tasks.md
feat(workflow): create workflow orchestrator to manage specify, plan, and tasks phases
feat(preflight): add pre-flight checks for CLI tools and project structure
The new tests ensure that the spec detection and validation functions work correctly, while the validation functions for tasks and phases enhance the robustness of the task management system. The workflow orchestrator streamlines the process of executing the specify, plan, and tasks phases, and the pre-flight checks help ensure that the necessary tools and project structure are in place before execution. This improves the overall reliability and usability of the application.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,15 @@ node_modules/
 package-lock.json
 
 .specify
+
+# Go binary outputs
+dist/
+*.test
+*.out
+autospec
+coverage.txt
+cover.out
+*.prof
+
+# Go build cache
+.cache/
