fix(tasks.yaml): update task status from Pending to InProgress to reflect current progress

--- a/specs/026-completion-notifications/tasks.yaml
+++ b/specs/026-completion-notifications/tasks.yaml
@@ -300,7 +300,7 @@ phases:
       tasks:
         - id: "T020"
           title: "Add notification config examples to docs/reference.md"
-          status: "Pending"
+          status: "InProgress"
           type: "documentation"
           parallel: true
           story_id: null
