fix(architecture.yaml): update checklist statuses from pending to pass for completed checks to reflect progress fix(architecture.yaml): document failure for events.Publish() latency specification to highlight required action for clarity

--- a/specs/031-event-driven-notifications/checklists/architecture.yaml
+++ b/specs/031-event-driven-notifications/checklists/architecture.yaml
@@ -14,22 +14,22 @@ categories:
         description: "Are all required event types explicitly enumerated in key_entities?"
         quality_dimension: "completeness"
         spec_reference: "key_entities"
-        status: "pending"
-        notes: "CommandCompleteEvent and StageCompleteEvent defined; verify no missing event types for future extensibility"
+        status: "pass"
+        notes: "CommandCompleteEvent and StageCompleteEvent enumerated in key_entities; sufficient for feature scope"
 
       - id: "CHK002"
         description: "Are Type() uint32 constants defined for each event type in requirements?"
         quality_dimension: "completeness"
         spec_reference: "FR-001"
-        status: "pending"
-        notes: "TypeCommandComplete and TypeStageComplete mentioned in key_entities but not explicitly in FR-001"
+        status: "pass"
+        notes: "FR-001 explicitly says 'with Type() uint32 methods'; key_entities lists TypeCommandComplete and TypeStageComplete constants"
 
       - id: "CHK003"
         description: "Is the event.Event interface implementation requirement documented?"
         quality_dimension: "completeness"
         spec_reference: "FR-001"
-        status: "pending"
-        notes: "FR-001 mentions 'Type() uint32 methods' but doesn't explicitly state events implement event.Event interface"
+        status: "pass"
+        notes: "key_entities says '(implements event.Event interface)' for both event types"
 
   - name: "API Contract Clarity"
     description: "Are interface contracts and function signatures unambiguous?"
@@ -38,29 +38,29 @@ categories:
         description: "Is the signature of lifecycle.Run() function fully specified?"
         quality_dimension: "clarity"
         spec_reference: "FR-003"
-        status: "pending"
-        notes: "FR-003 says 'Run() function' but doesn't specify exact signature (e.g., Run(name string, fn func() error) error)"
+        status: "pass"
+        notes: "docs/events.md shows exact signature: func Run(name string, fn func() error) error"
 
       - id: "CHK005"
         description: "Is the return type of events.Subscribe() documented (unsubscribe function)?"
         quality_dimension: "clarity"
         spec_reference: "FR-002"
-        status: "pending"
-        notes: "Key entities mention 'returns unsubscribe func' but FR-002 doesn't specify this"
+        status: "pass"
+        notes: "key_entities + docs/events.md both document 'returns unsubscribe func'"
 
       - id: "CHK006"
         description: "Is 'under 1ms' for events.Publish() latency precisely defined (p50, p99, worst case)?"
         quality_dimension: "clarity"
         spec_reference: "NFR-001"
-        status: "pending"
-        notes: "NFR-001 says 'returns in under 1ms' - is this average, median, or guaranteed worst case?"
+        status: "fail"
+        notes: "ACTION REQUIRED: Update NFR-001 to specify p99 < 1ms latency target for measurability"
 
       - id: "CHK007"
         description: "Is the callback signature for event handlers specified?"
         quality_dimension: "clarity"
         spec_reference: "FR-005"
-        status: "pending"
-        notes: "Handler.Subscribe() mentioned but handler function signature not documented"
+        status: "pass"
+        notes: "docs/events.md shows generic func(T) callback signature with concrete examples"
 
   - name: "Package Structure Consistency"
     description: "Are package boundaries and dependencies clearly defined?"
